src/components/button-group/ButtonGroup.style.scss
@import "../../styles/helpers";

.button-group {
  @include box(false, $primary);

  border: none;
  width: fit-content;
  position: relative;
  margin-bottom: 1rem !important;
  display: flex;
  flex-flow: row wrap;

  * {
    margin-bottom: 0;
  }

  .button {
    margin-bottom: 0;
    border-radius: 0;
    display: flex;
  }

  > div, .dropdown__trigger, .dropdown {
    display: flex;
    margin-bottom: 0 !important;
  }

  &__first {
    .button {
      border-top-left-radius: $borderRadius !important;
      border-bottom-left-radius: $borderRadius !important;
    }
  }

  &__last {
    .button {
      border-top-right-radius: $borderRadius !important;
      border-bottom-right-radius: $borderRadius !important;
    }
  }

}

